# commitai

./: Cargo.toml  LICENSE-MIT  README.md  install.sh
.github/workflows/: release.yml
src/: api.rs  cli.rs  config.rs  git.rs  main.rs  output.rs  providers.rs  template.rs  ui.rs
